# doc_build

./: .gitignore  README.md  __init__.py  defaults.yaml  doc_builder.py  pyproject.toml
.claude/skills/pdf-diff-screenshots/: SKILL.md
.claude/skills/pdf-diff-screenshots/scripts/: build_diff_at_commit.py  crop_changed_regions.py  render_pages.py  summarize.py
.github/workflows/: build_docs.yml
doc_build/: ISO_LINTERS.md  __init__.py  ast_diff.py  bold_table_lint.py  diff_colors.py  doc_builder.py  heading_case.py  iso_bold_table_lint.py  iso_clause_lint.py  iso_clause_map.yaml  iso_heading_case_lint.py  iso_heading_proper_nouns.yaml  iso_lint_utils.py
doc_build/filters/: filter_absolute_image_path.py  filter_bundle_images.py  filter_convert_mathblocks.py  filter_decorate_diff.py  filter_generate_index.py  filter_header6.py  filter_heading_case.py  filter_inject_image_hash.py  filter_iso_bold_table_header.py  filter_iso_xrefs.py  filter_railroad.py  filter_render_diff.py  filter_resolve_sections.py  filter_sections_new_page.py  filter_smaller_listings.py  filter_spellcheck.py  gen_svg.py  heading_case.py  mac_spellchecker.py  peg_to_peg.py  railroad.py  shared_filter_utils.py
doc_build/filters/pegen/: parser.py  parser_generator.py
doc_build/legal/: draft_copyright.md  draft_intro.md  publish_intro.md
doc_build/template/: LICENSE  README.md  after-header-includes.latex  default.latex  default.md  latex_diff_preamble.tex  style-guide.md  styles.html
doc_build/tools/: recreate_pdf.py.template  tectonic
doc_build/utils/: git.py
filters/: filter_bold_in_pre.py  filter_convert_mathblocks.py  filter_convert_svg.py  filter_generate_index.py  filter_resolve_sections.py  filter_spellcheck.py  mac_spellchecker.py  pandocfilters.py  railroad.py
filters/pegen/: build.py  grammar.py  python_generator.py  sccutils.py
template/: README.md
tests/: _ast_diff_helpers.py  test_iso_clause_lint.py
tests/build_scripts/: build_diff.py  build_docs.py  defaults.yaml
tests/diff_specification/after_commit/: README.md
tests/diff_specification/before_commit/: README.md
tests/feature/: README.md  test_ast_diff.py
tests/regression/: README.md  test_diff_ordering_with_duplicate_nodes.py
tests/specification/: Inlined.md  README.md  build_paths.yaml  headers_levels.md  railroads.md  toc_and_lists_test.md
tools/: pandoc_ast_diff.py  pdf_to_png.py  rebuild.sh  verify_right_margin.py
