[build-system]
build-backend = "flit_core.buildapi"
requires = [ "flit-core>=3.4" ]

[project]
name = "doc_build"
version = "0.1.0"
description = "Build scripts for AOUSD spec"
requires-python = ">=3.10"
dependencies = [ "diff-match-patch" ]

[tool.pixi.dependencies]
pandoc = "*"
pyyaml = "*"
librsvg = "*"
tectonic = "*"

[tool.pixi.pypi-dependencies]
doc_build = { path = ".", editable = true }

[tool.pixi.tasks]
build = "python tests/build_scripts/build_docs.py build"
build-diff = "python tests/build_scripts/build_diff.py"
test = { cmd = "python -c 'import sys; sys.argv[1:] and sys.exit(\"test does not accept extra args; pass them directly to build or build-diff\")'", depends-on = ["build", "build-diff"] }

[tool.pixi.workspace]
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]
preview = ["pixi-build"]

[tool.pixi.package.host-dependencies]
flit-core = ">=3.4"
tectonic = ">=0.15.0"

[tool.pixi.package.run-dependencies]
diff-match-patch = "*"
librsvg = "*"
pandoc = "*"
pyyaml = "*"
tectonic = "*"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.4.*" }
