[build-system]
build-backend = "flit_core.buildapi"
requires = [ "flit-core>=3.4" ]

[project]
name = "doc_build"
version = "0.1.0"
description = "Build scripts for AOUSD spec"
requires-python = ">=3.10"
dependencies = [ "diff-match-patch" ]

[tool.pixi.dependencies]
pandoc = "*"
pyyaml = "*"
librsvg = "*"
tectonic = "*"

[tool.pixi.pypi-dependencies]
doc_build = { path = ".", editable = true }

[tool.pixi.tasks]
build = "python tests/build_scripts/build_docs.py build"
build-diff = "python tests/build_scripts/build_diff.py"
feature-test = "python -m unittest discover -s tests/feature -t ."
regression-test = "python -m unittest discover -s tests/regression -t ."

[tool.pixi.tasks.test]
    # Convenience command to run feature-test, regression-test, build, and build-diff
    #   ie, `pixi run test` = `pixi run feature-test ; pixi run regression-test ; pixi run build ; pixi run build-diff`
    # Note that `test` / depends-on tasks cannot be passed extra arguments...
    # (see note below)
    depends-on = ["feature-test", "regression-test", "build", "build-diff"]

    # NOTE: this cmd is just to cause an error message to print if you try to pass args
    # to `pixi run test`
    # The pixi implementation of `depends-on`,does not forward extra command-line args,
    # or error if they are present - so doing, ie:
    #     pixi run test --keep-pdf-latexn
    # ...will seem to work, but actually the flag is just silently discarded.
    # This command causes the test task to fail in this scenario
    cmd = "python -c 'import sys; sys.argv[1:] and sys.exit(\"test does not accept extra args; pass them directly to build, build-diff, feature-test, or regression-test\")'"

[tool.pixi.workspace]
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]
preview = ["pixi-build"]

[tool.pixi.package.host-dependencies]
flit-core = ">=3.4"
tectonic = ">=0.15.0"

[tool.pixi.package.run-dependencies]
diff-match-patch = "*"
librsvg = "*"
pandoc = "*"
pyyaml = "*"
tectonic = "*"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.4.*" }
